# learn_OLD2

./: .gitignore  gitclean.sh  learn
python/: HakerRank.py  image_magick.py  main.py  pyproject.toml  python_basic.py  test.txt  test_notion.py  tmp.py  tu-tu-ru.py
python/_collections/: _deque.py
python/_fastapi/yet_another_example/: main.py  pyproject.toml
python/_hashlib/: main.py
python/_itertools/: main.py
python/_pydantic/: main.py
python/_sqlalchemy/: docker-compose.yaml
python/_sqlalchemy/session/: main.py
python/_ya/: main.py  pyproject.toml
python/_ya/leetcode/: tmp.py
python/_ya/youtube/: vector_list.py
python/book-fluent-python/: cards.py
python/book-simple-python/: bottle_test.py  dishes.py  gevent_monkey.py  gevent_test.py  haker.py  index.html  main.py  oop.py  redis_drying.py  redis_dtying2.py  redis_pub.py  redis_sub.py  redis_washer.py  tcp_client.py  tcp_server.py  test.py  test_map.py  thread.py  twisted_server.py  udp_client.py  udp_server.py  work_videos.py  zmq_client.py  zmq_server.py
python/book-simple-python/debug/: capitails.py  cities.txt  decor_dump.py  logger.py  main.py
python/book-simple-python/ex/: echo_time_server.py  zmq_client.py  (+1 more)
python/core/: script1.py  script2.py
python/from_work_video/: config.ini  music.csv  oop3.py  pg_sql.py  script.py  test2.py  test_aiohttp.py  test_asyncio.py  test_mongo.py  test_redis.py  tmp.py
python/simple-connect-to-db/: db.sql  main.py
python/test_telegram_bot/: Dokerfile
python/tests/: m_faker.py
python/tmp/: class_example.py  func_example.py  test.py  test.py.html
(+675 files in other folders)
